Fix for logo being left aligned.

--- a/style.css
+++ b/style.css
@@ -24,7 +24,10 @@ Updated: 2014-06-20 -- 2:00pm
 /**
  * Retina Logo
  */
-
+#logo {
+    width: 100%;
+    text-align: center;
+}
 #logo-regular {
     display: inline-block;
 }
